--- a/src/assets/style/pages/stay-view/cmps/stay-reserve.scss
+++ b/src/assets/style/pages/stay-view/cmps/stay-reserve.scss
@@ -11,7 +11,7 @@
     top: 48px;
     margin-bottom: 48px;
 
-    transition: bottom 0.7s ease;
+    transition: bottom 1.1s ease;
 
     .close-btn {
         position: absolute;
@@ -34,7 +34,7 @@
         top: unset;
         margin-bottom: 0;
         position: fixed;
-        bottom: -50%;
+        bottom: -150%;
         border-radius: 0%;
         background: white;
         width: 100%;
